Uva Problems/673 - Parentheses Balance/compiling_error.txt
/home/professor/Documents/Summer Acceleration/Algorithmic Acceleration/Uva Problems/673 - Parentheses Balance/main.cpp: In function ‘int main()’:
/home/professor/Documents/Summer Acceleration/Algorithmic Acceleration/Uva Problems/673 - Parentheses Balance/main.cpp:17:27: error: invalid initialization of non-const reference of type ‘std::__cxx11::string& {aka std::__cxx11::basic_string<char>&}’ from an rvalue of type ‘std::__cxx11::string {aka std::__cxx11::basic_string<char>}’
     bool r = is_balanced(s);
                           ^
In file included from /usr/include/c++/6/string:52:0,
                 from /home/professor/Documents/Summer Acceleration/Algorithmic Acceleration/Uva Problems/673 - Parentheses Balance/main.cpp:4:
/usr/include/c++/6/bits/basic_string.h:454:7: note:   after user-defined conversion: std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::basic_string(const _CharT*, const _Alloc&) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]
       basic_string(const _CharT* __s, const _Alloc& __a = _Alloc())
       ^~~~~~~~~~~~
/home/professor/Documents/Summer Acceleration/Algorithmic Acceleration/Uva Problems/673 - Parentheses Balance/main.cpp:8:6: note:   initializing argument 1 of ‘bool is_balanced(std::__cxx11::string&)’
 bool is_balanced(string&);
      ^~~~~~~~~~~
